Width issue fixed on mobile

--- a/css/screen.scss
+++ b/css/screen.scss
@@ -438,7 +438,7 @@ body {
             margin:0 auto;
             max-width:800px;
             padding:1em 2em 3em;
-            width:100vw;
+            width:auto;
 
             &-header,
             &-body {
